<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QuizzExpress</string>
    <string name="user1">Please choose a username</string>
    <string name="valid">Validate</string>
    <string name="online">In-Line</string>
    <string name="offline">Off-Line</string>
    <string name="question">Question</string>
    <string name="cancel">Cancel</string>
    <string name="userNotAvailable">Username not available</string>
    <string name="backHome">Back home</string>
    <string name="points">\u0020 points</string>
    <string name="recordToBeat">Record to beat : \u0020</string>
    <string name="recordAttempt">Play</string>
    <string name="question_">Question \u0020</string>
    <string name="score">Score : \u0020</string>
    <string name="result">Result</string>
    <string name="newRecord">New record !</string>
    <string name="matchNul">Tie Game !</string>
    <string name="win">You win !</string>
    <string name="lost">You lost !</string>
    <string name="waitPlayer">Waiting for a player</string>
    <string name="adv">"Opponent :  "</string>
    <string name="seeGames">Display my games</string>
    <string name="internetIssue">Network issue !</string>
    <string name="playAgain">Play again !</string>
    <string name="ok">OK</string>
    <string name="loadingQuestions">Loading questions library</string>
    <string name="password">Password</string>
    <string name="passwordVerif">Password (check)</string>
    <string name="username">Username</string>
    <string name="error">Error</string>
    <string name="notSamePassword">Not same passwords</string>
    <string name="badCredentials">Bad credentials</string>
    <string name="noGames">No games yet !</string>
    <string name="myAnswers">My answers</string>
    <string name="allAnswers">All the answers</string>
    <string name="ranking">Ranking</string>
    <string name="seeInvitations">Display my invitations</string>
    <string name="noInvitations">No invitations yet !</string>
    <string name="sendInvitation">Send</string>
    <string name="invitation">Invitation</string>
    <string name="invit_from">"From : "</string>
    <string name="invit_to">"To : "</string>
    <string name="waitState">waiting</string>
    <string name="unknownUser">This user doesn\'t exist</string>
    <string name="notMe">You can\'t play against yourself.</string>
    <string name="invitationIsset">This invitation has been already sent.</string>
    <string name="invit_removed">This invitation has been removed</string>
    <string name="goodAnswersRate">Good answers rates</string>
    <string name="gameWillStart">The game is starting !</string>
    <string name="advOnly">Opponent</string>
    <string name="create">Create</string>
    <string name="login">Login</string>
    <string name="thanksQuestion">Thank you !</string>
    <string name="questionToShort">The question is too short</string>
    <string name="missGoodAnswer">There is no good answer</string>
    <string name="missBadAnswers">There is not enough bad answers</string>
    <string name="errorServer">Server error</string>
    <string name="questionHint">Question (70 letters max)</string>
    <string name="goodAnswerHint">Good answer (20 letters max)</string>
    <string name="badAnswerHint">Bad answer (20 letters max)</string>
    <string name="addQuestion">Add a question</string>
    <string name="send">Send</string>
    <string name="waitOpponent">Waiting for the opponent</string>
    <string name="infoAddQuestion">You can now add questions from the home page.</string>
    <string name="bravo">Good job !</string>
    <string name="badConnection">Bad connection, please try later…</string>
</resources>
