<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/addQuestion"
        android:textAlignment="center"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/questionHint"
                android:maxLength="70" />

            <EditText
                android:id="@+id/goodAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/goodAnswerHint"
                android:maxLength="20"
                android:singleLine="true" />

            <EditText
                android:id="@+id/badAnswer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/badAnswerHint"
                android:maxLength="20"
                android:singleLine="true" />

            <EditText
                android:id="@+id/badAnswer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/badAnswerHint"
                android:maxLength="20"
                android:singleLine="true" />

            <EditText
                android:id="@+id/badAnswer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/badAnswerHint"
                android:maxLength="20"
                android:singleLine="true" />

            <Button
                android:id="@+id/sendQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_shape"
                android:paddingBottom="20dp"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:paddingTop="20dp"
                android:text="@string/send"
                android:layout_marginBottom="15dp"
                android:textSize="20sp" />


            <ProgressBar
                android:id="@+id/loader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="50dp"
                android:indeterminate="true"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>