<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invitation"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="30dp"
        android:layout_weight="0"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:hint="@string/username"
            android:maxLines="1"
            android:singleLine="true" />


        <TextView
            android:id="@+id/errorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Error"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorRed"
            android:visibility="gone"
            android:textSize="15sp" />

        <Button
            android:id="@+id/sendInvit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:paddingBottom="20dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="20dp"
            android:text="@string/sendInvitation"
            android:textSize="20sp" />


        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp"
            android:indeterminate="true"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>