<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".online.ResultActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:src="@drawable/logo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/waitOpponent"
                    android:textAlignment="center"
                    android:textSize="38sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/scoreA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/scoreSep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" - "
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/scoreB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/header_bar"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <TextView
                        android:id="@+id/playerA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:lineSpacingExtra="-7dp"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:gravity="center"
                        android:text="@string/question"
                        android:textAlignment="center"
                        android:textSize="23sp" />

                    <TextView
                        android:id="@+id/playerB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:lineSpacingExtra="-7dp"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/backHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/button_shape"
            android:padding="15dp"
            android:text="@string/backHome"
            android:textSize="20sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
